objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>HHS Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed by Opportunity</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>L2O_Account_Status__c</fullName>
        <formula>TEXT(L2O_Opportunity__r.Account.L2O_Account_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account__c</fullName>
        <formula>L2O_Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Age__c</fullName>
        <description>Age of Case In days</description>
        <formula>IF(
ISPICKVAL( Status , &quot;Closed&quot;),
ROUND( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) , 0), ROUND(NOW()- CreatedDate, 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of Case In days</inlineHelpText>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this request has been reviewed and validated by SDR team and is now ready for contracting.</description>
        <inlineHelpText>Indicates that this request has been reviewed and validated by SDR team and is now ready for contracting.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Case_Development_Hours__c</fullName>
        <label>Case Development Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Customer_Go_Live_Expectation__c</fullName>
        <label>Customer Go-Live Expectation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Date_Needed__c</fullName>
        <label>Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Demo_Audience__c</fullName>
        <label>Demo Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Providers</fullName>
                </value>
                <value>
                    <fullName>Clinical Team</fullName>
                </value>
                <value>
                    <fullName>Consultants</fullName>
                </value>
                <value>
                    <fullName>Executive Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Demo_Site__c</fullName>
        <label>Demo Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Detailed_Summary__c</fullName>
        <label>Detailed Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_EHR_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EHR Integration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Hardware__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hardware</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Internal_Product_Stakeholder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Internal team member who is involved in the related Opportunity. This can be another AE, Product Specialist, SME or anyone who needs visibility to this SDR. Solution Architects should not be added to this field.</inlineHelpText>
        <label>Internal Product Stakeholder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_LP_Consumer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LP/Consumer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Data Migration mapping to legacy orgs</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Livongo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Livongo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Multiple_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this request/Opportunity related to another/exisiting Opportunity?</description>
        <inlineHelpText>Is this request/Opportunity related to another/exisiting Opportunity?</inlineHelpText>
        <label>Multiple Opportunities?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Multiple_Opportunity_Details__c</fullName>
        <description>Details about other opportunity if there are multiple.</description>
        <inlineHelpText>Details about other opportunity if there are multiple.</inlineHelpText>
        <label>Multiple Opportunity Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Opportunity_Maturity__c</fullName>
        <description>Provide summary for where the opportunity is and what has been done to date.</description>
        <inlineHelpText>Provide summary for where the opportunity is and what has been done to date.</inlineHelpText>
        <label>Opportunity Maturity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Opportunity_Type__c</fullName>
        <formula>TEXT(L2O_Opportunity__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Other_HL7_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other HL7 Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__Quote__c.SBQQ__Opportunity2__c</field>
                <operation>equals</operation>
                <valueField>$Source.L2O_Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Request_Internal_Notes__c</fullName>
        <description>Allows Solution Architect assignee&apos;s to keep a log of request progress.</description>
        <inlineHelpText>This field is for the Solution Architect to keep a log of request progress.</inlineHelpText>
        <label>Request Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Solo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_SolutionArchitect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Telehealth_Experience__c</fullName>
        <label>Telehealth Experience?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Use_Case_Primary__c</fullName>
        <formula>TEXT(L2O_Opportunity__r.L2O_Use_Case_Primary__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use Case (Primary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Use_Case_Secondary__c</fullName>
        <formula>TEXT(L2O_Opportunity__r.L2O_Use_Case_Secondary__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use Case (Secondary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_UserInternal_Product_Stakeholder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Internal team member who is involved in the related Opportunity. This can be another AE, Product Specialist, SME or anyone who needs visibility to this SDR. Solution Architects should not be added to this field.</inlineHelpText>
        <label>UserInternal Product Stakeholder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_What_EHR_s__c</fullName>
        <label>What EHR(s)?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Campaign_Name_FT__c</fullName>
        <label>Ad Campaign Name (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Campaign_Name_LC__c</fullName>
        <label>Ad Campaign Name (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Landing_Page_FT__c</fullName>
        <label>Landing Page (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Landing_Page_LC__c</fullName>
        <label>Landing Page (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Marketing_Channel_FT__c</fullName>
        <description>Type of marketing activity</description>
        <inlineHelpText>Type of marketing activity</inlineHelpText>
        <label>Marketing Channel (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Marketing_Channel_LC__c</fullName>
        <description>Type of marketing activity</description>
        <inlineHelpText>Type of marketing activity</inlineHelpText>
        <label>Marketing Channel (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Date_FT__c</fullName>
        <description>The date that the session activity occurred</description>
        <inlineHelpText>The date that the session activity occurred</inlineHelpText>
        <label>Touchpoint Date (FT)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Date_LC__c</fullName>
        <description>The date that the session activity occurred</description>
        <inlineHelpText>The date that the session activity occurred</inlineHelpText>
        <label>Touchpoint Date (LC)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Source_FT__c</fullName>
        <description>The name of the referrer</description>
        <inlineHelpText>The name of the referrer</inlineHelpText>
        <label>Touchpoint Source (FT)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Source_LC__c</fullName>
        <description>The name of the referrer</description>
        <inlineHelpText>The name of the referrer</inlineHelpText>
        <label>Touchpoint Source (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>L2O_SDR_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>SDR Queue</label>
        <queue>L2O_SDR_Queue</queue>
        <sharedTo>
            <group>Solution_Ops_group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Demo</fullName>
        <active>true</active>
        <businessProcess>HHS Support Process</businessProcess>
        <label>Demo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <businessProcess>HHS Support Process</businessProcess>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Privacy_Security_Request</fullName>
        <active>true</active>
        <businessProcess>HHS Support Process</businessProcess>
        <label>Privacy/Security Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFP_RFI_Support</fullName>
        <active>true</active>
        <businessProcess>HHS Support Process</businessProcess>
        <label>RFP/RFI Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>SOW_Contract_Support</fullName>
        <active>true</active>
        <businessProcess>HHS Support Process</businessProcess>
        <label>SOW/Contract Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solution_Discovery_Design</fullName>
        <active>true</active>
        <businessProcess>HHS Support Process</businessProcess>
        <label>Solution Discovery/Design</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <businessProcess>HHS Support Process</businessProcess>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>